# titles

./: .gitignore  DEVELOPMENT.md  QUICKSTART.md  quick-run.fish  quick-run.sh  run-dev.fish  run-dev.sh
data/: me.iepure.Ticketbooth.gschema.xml.in
po/: POTFILES
src/: main.py  meson.build  preferences.py  ticketbooth.gresource.xml.in  window.py
src/dialogs/: meson.build  stremio_login_dialog.py
src/models/: season_model.py
src/pages/: details_page.py
src/providers/: local_provider.py  meson.build  stremio_addon_service.py  stremio_auth.py  stremio_catalog_service.py  stremio_credentials.py
src/ui/: preferences.blp
src/ui/dialogs/: message_dialogs.blp  stremio_login.blp
src/ui/gtk/: help-overlay.blp
src/ui/views/: content_view.blp  main_view.blp
src/ui/widgets/: account_button.blp  catalog_item.blp  catalog_item.ui  catalog_row.blp  catalog_row.ui  show_more_card.blp
src/views/: content_view.py  db_update_view.py  main_view.py  meson.build
src/widgets/: account_button.py  catalog_item.py  catalog_row.py  meson.build  show_more_card.py
